--- a/pages/css/indexP.css
+++ b/pages/css/indexP.css
@@ -55,12 +55,96 @@ padding-right: 100px;
 .addRemove
 {
     margin-top: 20px;
-
+    margin-left: 10%;
 
 }
 
-.addRemove input
+
+#addSchedule
 {
-    height: 50px;
-    margin-left: 25%;
+    float: right;
+    margin-right: 100px;
+    background-color: #9A2323;
 }
+
+[type=submit]
+{
+    width: 150px;
+    height: 50px;
+    margin-right: 75px;
+    background-color: #9A2323;
+    color: #dfdfdf;
+    font-weight: bold;
+    font-size: 1.2em;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 1s, color 1s;
+}
+
+[type=submit]:hover
+{
+    background-color: #861717;
+    color: white;
+}
+
+
+[type=text]
+{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+
+.hover_bkgr_fricc{
+    background:rgba(0,0,0,.4);
+    cursor:pointer;
+    display:none;
+    height:100%;
+    position:fixed;
+    text-align:center;
+    top:0;
+    width:100%;
+    z-index:1;
+    }
+    .hover_bkgr_fricc .helper{
+    display:inline-block;
+    height:100%;
+    vertical-align:middle;
+    }
+    .hover_bkgr_fricc > div {
+    background-color: #fff;
+    box-shadow: 10px 10px 60px #555;
+    display: inline-block;
+    height: auto;
+    max-width: 551px;
+    min-height: 100px;
+    vertical-align: middle;
+    width: 60%;
+    position: relative;
+    left:-10%;
+    border-radius: 8px;
+    padding: 15px 5%;
+    }
+    .popupCloseButton {
+    background-color: #fff;
+    border: 3px solid #999;
+    border-radius: 50px;
+    cursor: pointer;
+    display: inline-block;
+    font-family: arial;
+    font-weight: bold;
+    position: absolute;
+    top: -20px;
+    right: -20px;
+    font-size: 25px;
+    line-height: 30px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    }
+    .popupCloseButton:hover {
+    background-color: #ccc;
+    }
+    .hover_bkgr_fricc h1{
+        color: darkblue;
+    }
