--- a/simora/src/main/resources/static/pages/login.css
+++ b/simora/src/main/resources/static/pages/login.css
@@ -5,19 +5,23 @@ body{
 }
 .container{
     width: 100%;
-    margin:150px auto ;
-    background-color: rgb(163, 155, 155);
-    /* border:1px solid red; */
+    min-height: 500px;
+    margin: 250px auto;
+    background-color: #F1F1F1;
 }
 .simora{
     float: left;
-    margin-left: 190px;
-    margin-top: 50px;
+    margin-left: 150px;
+    margin-top: 0px;
+    font-size: xx-large;
+    /* border:1px solid red; */
 }
 
 .login{
     float: right;
-    width: 300px;
+    width: 450px;
+    height: 550px;
+    margin-top: -50px;
     margin-right: 300px;
     background-color: #F7F7F7;
     border: 0.5px solid rgb(182, 179, 179);
@@ -39,22 +43,24 @@ form{
 }
 
 label{
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 500;
-    padding-top:20px;
+    padding-top:40px;
 }
 input[type=text],[type=password]{
-    width: 200px;
-    height: 30px;
+    margin-bottom: 20px;
+    width: 250px;
+    height: 40px;
     border: 0.2px solid #cccbcb;
-    padding-left:5px;
+    padding-left: 5px;
 }
 input[type=submit]{
-    height: 35px;
-    padding:5px 27px;
+    height: 45px;
+    padding: 5px 27px;
     background-color: #AB1112;
     color: white;
-    margin: 20px 76px;
+    margin: 20px 100px;
+    font-size: 1.1em;
     border-radius: 10px;
 }
 p{
@@ -67,16 +73,18 @@ a{
     text-decoration: none;
 }
 img{
-    padding-left: 55px;
+    width: 200px;
+    padding-left: 100px;
 }
 .id{
-    padding-top: 20px;
+    padding-top: 40px;
+    padding-left: 50px;
 }
 .icon {
     float: left;
-    padding: 6px;
+    padding: 13px 7px;
     background: #EEEEEE;
     color: black;
-    min-width: 20px;
+    min-width: 25px;
     text-align: center;
   }
