--- a/simora/src/main/resources/static/pages/css/login.css
+++ b/simora/src/main/resources/static/pages/css/login.css
@@ -47,12 +47,20 @@ label{
     font-weight: 500;
     padding-top:40px;
 }
+#recover{
+    font-size: 18px;
+    font-weight: 500;
+    font-size: 18px;
+    font-weight: 500;
+    width: 250px;
+}
 input[type=text],[type=password]{
     margin-bottom: 20px;
     width: 250px;
     height: 40px;
     border: 0.2px solid #cccbcb;
     padding-left: 5px;
+    font-size: 1.2em;
 }
 input[type=submit]{
     height: 45px;
@@ -86,5 +94,13 @@ img{
     background: #EEEEEE;
     color: black;
     min-width: 25px;
+    text-align: center;
+  }
+
+  #code
+  {
+    width: 100px;
+    margin-left: 100px;
+    font-size: 1.2em;
     text-align: center;
   }
