--- a/simora/src/main/resources/templates/login.html
+++ b/simora/src/main/resources/templates/login.html
@@ -21,7 +21,7 @@
     <div class="login">
 
         <form th:action="@{/login}" method="post">
-            <img src="@{/images/logo.png}" alt="logo e UP" width="200px"/>
+            <img src="../static/images/logo.png" th:src="@{images/logo.png}" alt="logo e UP" width="200px"/>
 
             <div class="id">
                 <label>Perdoruesi:</label><br>
