--- a/simora/src/main/resources/templates/addUser.html
+++ b/simora/src/main/resources/templates/addUser.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SIMORA - Shto shfrytezues</title>
-    <link rel="stylesheet" type="text/css" href="/pages/css/menu.css"/>
-    <link rel="stylesheet" href="/pages/css/addUser.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/menu.css"/>
+    <link rel="stylesheet" href="/css/addUser.css"/>
 </head>
 <body>
     <div class="menu">
@@ -13,7 +14,7 @@
             <p>SIMORA</p>
         </div>
         <div class="photo">
-            <img src="/pages/images/Avatar.png" width="200px" height="200px">
+            <img src="../static/images/Avatar.png" th:src="@{images/Avatar.png}" width="200px" height="200px">
         </div>
         <div class="info">
             <p>ID</p>
