--- a/simora/src/main/resources/templates/recoveryPassword.html
+++ b/simora/src/main/resources/templates/recoveryPassword.html
@@ -1,12 +1,13 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
-    <link rel="stylesheet" href="/pages/css/login.css">
+    <link rel="stylesheet" th:href="@{/css/login.css}"
+          href="../css/login.css">
 </head>
 <body>
 <div class="container">
@@ -19,7 +20,7 @@
 
     <div class="login">
         <form action="#" method="post">
-            <img src="/pages/images/logo.png" alt="logo e UP" width="200px"/>
+            <img src="../static/images/logo.png" th:src="@{images/logo.png}" alt="logo e UP" width="200px"/>
 
             <div class="id">
                 <label>Shkruaj fjalekalimin e ri:</label><br>
