--- a/simora/src/main/resources/templates/addSchedule.html
+++ b/simora/src/main/resources/templates/addSchedule.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en"  xmlns:th="http://www.thymeleaf.org"  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <meta charset="UTF-8">
@@ -18,10 +18,10 @@
             <img src="../static/images/Avatar.png" th:src="@{images/Avatar.png}" width="200px" height="200px">
         </div>
         <div class="info">
-            <p>ID</p>
-            <p>Emri Mbiemri</p>
-            <p>Email</p>
-            <p>Departamenti i DEPT</p>
+            <p th:text="${currentUser.ID}"></p>
+            <p><span th:text="${currentUser.firstName}"></span> <span>&nbsp;</span><span th:text="${currentUser.lastName}"></span></p>
+            <p th:text="${currentUser.email}"></p>
+            <p th:text="${currentUser.department}"></p>
             <p>FSHMN</p>
         </div>
         <div style="margin-top: 125px;" class="menuItems">
