video and audio call+ message

--- a/simora/src/main/resources/templates/addSchedule.html
+++ b/simora/src/main/resources/templates/addSchedule.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" type="text/css" href="/css/menu.css"/>
     <link rel="stylesheet" href="/css/addUser.css"/>
 </head>
+<!--const turnServerIPAddress = "stun.l.google.com:19305";-->
+<!--const turnServerPort = "TURN_SERVER_PORT";-->
+<!--const turnServerUserName = "TURN_SERVER_USERNAME";-->
+<!--const turnServerPassword = "TURN_SERVER_PASSWORD";-->
 
 <body>
     <div class="menu">
