--- a/simora/src/main/resources/templates/login.html
+++ b/simora/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" th:href="@{/css/login.css}"
           href="../css/login.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" type="text/css" />
+    <link th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css}" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="container">
