--- a/simora/src/main/resources/templates/userAdded.html
+++ b/simora/src/main/resources/templates/userAdded.html
@@ -14,7 +14,7 @@
         <p>SIMORA</p>
     </div>
     <div class="photo">
-        <img src="../static/images/Avatar.png" th:src="@{images/Avatar.png}" width="200px" height="200px">
+        <img src="../static/images/Avatar.png" th:src="@{~/images/Avatar.png}" width="200px" height="200px">
     </div>
     <div class="info">
         <p>ID</p>
