--- a/simora/src/main/resources/templates/videoCall.html
+++ b/simora/src/main/resources/templates/videoCall.html
@@ -4,80 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/css/videoCall.css"/>
     <title>WebRTC Video Chat</title>
-    <style>
-
-        #videoContainer {
-            display: table;
-            margin: 0 auto;
-        }
-
-        video{
-            margin: 10px;
-            border: 2px solid #000000;
-        }
-
-        textarea {
-            width: 100%;
-            height: 150px;
-            resize: none;
-            box-sizing : border-box;
-        }
-
-        .center {
-            margin: auto;
-            width: 70%;
-            border: 3px solid green;
-            padding: 20px;
-        }
-
-        input, button{
-            width: 100%;
-            box-sizing : border-box;
-        }
-
-        video{
-            width: 40%;
-            height: 100%;
-        }
-
-        button {
-            border: 1px solid #000000;
-            background-color: #0099ff;
-            color: #ffffff;
-            padding: 5px 10px;
-        }
-
-        button:disabled,
-        button[disabled]{
-            border: 1px solid #999999;
-            background-color: #cccccc;
-            color: #666666;
-        }
-
-        th, td {
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
 
 </body>
 
 <div class="center">
-    <button id="sendOfferButton" onclick="createAndSendOffer()">Call</button>
-    <button id="answerButton" onclick="createAndSendAnswer()">Answer</button>
-    <button id="hangUpButton" onclick="disconnectRTCPeerConnection()">Hang Up</button><br/><br/>
-
-    <input id="messageInput" type="text" size="80" placeholder="Enter message to send">
-    <button id="sendMessageButton" onclick="sendMessage()">Send Message</button><br/><br/>
-
+    <div class="call">
     <p style="text-align: center">Tap to Change Front/Back Camera</p>
 
     <div id="videoContainer">
         <video id="localVideo" onclick="switchMobileCamera()" muted autoplay playsinline></video>
         <video id="remoteVideo" autoplay playsinline></video>
     </div>
+    <button id="sendOfferButton" onclick="createAndSendOffer()">Call</button>
+    <button id="answerButton" onclick="createAndSendAnswer()">Answer</button>
+    <button id="hangUpButton" onclick="disconnectRTCPeerConnection()">Hang Up</button><br/><br/>
+
+    </div>
+    <div class="message">
+        <textarea readonly id="chatTextArea" style="width: 500px;
+    height: 250px;    border: 4px solid #AB1112;
+    border-radius: 10px;"></textarea><br/><br>
+    <input id="messageInput" type="text" size="80" placeholder="Enter message to send" style="width: 330px;
+    height: 50px;
+    float: left;border-radius: 10px;    margin-left: 90px;">
+    <button id="sendMessageButton" onclick="sendMessage()">Send Message</button><br/><br/>
+    </div>
+
 
     <table style="width:100%">
         <tr>
@@ -93,7 +49,7 @@
     </div>
     <br/><br/>
 
-    <textarea readonly id="chatTextArea"></textarea><br/><br/>
+
 
     <textarea readonly id="logs"></textarea><br/><br/>
 
@@ -309,6 +265,7 @@
                 case "connected":
                     log("Web RTC Peer Connection Connected.");
                     document.getElementById("answerButton").disabled = true;
+                    //document.getElementById("answerButton").style.background-color = "green";
                     document.getElementById("sendOfferButton").disabled = true;
                     document.getElementById("hangUpButton").disabled = false;
                     document.getElementById("sendMessageButton").disabled = false;
