--- a/simora/src/main/resources/templates/indexA.html
+++ b/simora/src/main/resources/templates/indexA.html
@@ -35,8 +35,8 @@
             </nav>
         </div>
         <div class="footer">
-            <a href="#" id="logout">Ckyqu</a>
-            <a href="#" id="changePass">Ndrysho fjalekalimin</a>
+            <a href="login" id="logout">Ckyqu</a>
+            <a href="recoveryEmail" id="changePass">Ndrysho fjalekalimin</a>
         </div>
     </div>
 
@@ -143,7 +143,7 @@
                 
 
                     
-                </script>
+            
 
 
         </div>
