--- a/simora/src/main/resources/templates/indexP.html
+++ b/simora/src/main/resources/templates/indexP.html
@@ -33,8 +33,8 @@
             </nav>
         </div>
         <div class="footer">
-            <a href="#" id="logout">Ckyqu</a>
-            <a href="#" id="changePass">Ndrysho fjalekalimin</a>
+            <a href="login" id="logout">Ckyqu</a>
+            <a href="recoveryEmail" id="changePass">Ndrysho fjalekalimin</a>
         </div>
     </div>
     <div class="content">
