--- a/simora/src/main/resources/templates/login.html
+++ b/simora/src/main/resources/templates/login.html
@@ -34,13 +34,13 @@
                 <input type="submit" value="Kycu">
             </div>
         </form>
-        <div th:if="${param.error}">
+        <div th:if="${param.error}" style="text-align:center;font-size:14px;color:red;">
             Invalid username and password.
         </div>
         <div th:if="${param.logout}">
             You have been logged out.
         </div>
-        <p><a href="#">Keni harruar fjalekalimin?</a></p>
+        <p><a href="recoveryEmail">Keni harruar fjalekalimin?</a></p>
     </div>
 </div>
 
