--- a/simora/src/main/resources/templates/login.html
+++ b/simora/src/main/resources/templates/login.html
@@ -26,7 +26,7 @@
             <div class="id">
                 <label>Perdoruesi:</label><br>
                 <i class="fa fa-user icon"></i>
-                <input class="input-field" type="text" placeholder="Shkruaj emailin..." name="username"><br>
+                <input class="input-field" type="text" placeholder="Shkruaj ID..." name="username"><br>
                 <label>Fjalekalimi:</label><br>
                 <i class="fa fa-key icon"></i>
                 <input class="input-field" type="password" placeholder="Shkruaj fjalekalimin..." name="password"><br>
@@ -35,10 +35,10 @@
             </div>
         </form>
         <div th:if="${param.error}">
-            Invalid username and password.
+            ID dhe fjalekalimi jo valid.
         </div>
         <div th:if="${param.logout}">
-            You have been logged out.
+            Ju jeni ckyqur
         </div>
         <p><a href="#">Keni harruar fjalekalimin?</a></p>
     </div>
